# time-intervals-wasm

./: Cargo.toml  README.md
docs/: data.ttl  index.html  style.css  wasm_oxi_time.d.ts  wasm_oxi_time.js  wasm_oxi_time_bg.wasm  wasm_oxi_time_bg.wasm.d.ts
src/: csv_to_rdf.rs  data.csv  data2.ttl  event.ttl  lib.rs  oxi_db.rs
web/: index.html  wasm_oxi_time.d.ts  wasm_oxi_time.js  wasm_oxi_time_bg.wasm  wasm_oxi_time_bg.wasm.d.ts
