[package]
name = "wasm-oxi-time"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
wasm-bindgen = "0.2.84"
#chrono = { version = "0.4", features = ["serde"] }
#csv = "1.1"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
futures = { version = "0.3", default-features = false }
js-sys = "0.3.61"
oxigraph = "0.3.15"
tempfile = "3.5.0"

[dependencies.web-sys]
version = "0.3.61"
features = [
  "HtmlInputElement", "FileReader", "ProgressEvent", "FileList", "File"
]
 
[lib]
crate-type = ["cdylib"]
 
[profile.dev]
opt-level = "s"
